# create-wheel

./: README.md  pyproject.toml  setup.py  steps.md
src/create_wheel/: get_odd_or_even.py
