[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-wheel"
version = "0.0.1"
authors = [
  { name="Gabriel Canepa", email="can20012@byui.edu" },
]
description = "Sample project to demonstrate how to create a wheel file"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/gacanepa/create-wheel"
"Bug Tracker" = "https://github.com/gacanepa/create-wheel/issues"